collected_code/mystruct_error.txt
   Compiling playground v0.0.1 (file:///playground)
warning: unused variable: `obj`
  --> src/main.rs:30:13
   |
30 |     let mut obj = MyStruct::new(&x);
   |             ^^^ help: consider using `_obj` instead
   |
   = note: #[warn(unused_variables)] on by default

error[E0596]: cannot borrow `mystruct` as mutable, as it is not declared as mutable
  --> src/main.rs:16:9
   |
14 |         let mystruct = MyStruct { v : initial, p : &arg };
   |             -------- help: consider changing this to be mutable: `mut mystruct`
15 | 
16 |         mystruct.update();
   |         ^^^^^^^^ cannot borrow as mutable

error[E0505]: cannot move out of `mystruct` because it is borrowed
  --> src/main.rs:18:9
   |
16 |         mystruct.update();
   |         -------- borrow of `mystruct` occurs here
17 | 
18 |         mystruct
   |         ^^^^^^^^
   |         |
   |         move out of `mystruct` occurs here
   |         borrow later used here

warning: variable does not need to be mutable
  --> src/main.rs:30:9
   |
30 |     let mut obj = MyStruct::new(&x);
   |         ----^^^
   |         |
   |         help: remove this `mut`
   |
   = note: #[warn(unused_mut)] on by default

error: aborting due to 2 previous errors

Some errors occurred: E0505, E0596.
For more information about an error, try `rustc --explain E0505`.
error: Could not compile `playground`.

To learn more, run the command again with --verbose.


